Hice para que se pueda buscar por descripcion en la pagina

--- a/src/app/productos/style.css
+++ b/src/app/productos/style.css
@@ -10,3 +10,8 @@
     color: #cec407;
     -webkit-text-stroke: .7px #B4AE34;
 }
+
+#precioOferta{
+    color: red !important;
+    font-size: 20px;
+}
