Estilice un poco para distintos dipositivos y tambien puse el menuHamn

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (width < 1000px){
+    #hamb{
+        display: block;
+    }
+
+    #navegacion{
+        display: none;
+    }
+}
