--- a/src/app/productos/style.css
+++ b/src/app/productos/style.css
@@ -1,4 +1,4 @@
-#productCard{
+    #productCard{
     height: 458px;
 }
 
@@ -14,4 +14,54 @@
 #precioOferta{
     color: red !important;
     font-size: 20px;
+}
+
+@media (width < 1300px){
+    /* aside{
+        display: none;
+    } */
+    #paginaProductos{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (width < 1130px){
+    #paginaProductos{
+        grid-template-columns: 1fr 1fr;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    #paginaProductos a{
+        align-self: center;
+    }
+}
+
+
+@media (width < 850px){
+    aside{
+        display: none;
+    }
+    #paginaProductos{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+
+@media (width < 850px){
+    aside{
+        display: block;
+    }
+    #paginaProductos{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (width < 510px){
+    aside{
+        display: none;
+    }
+    #paginaProductos{
+        grid-template-columns: 1fr;
+    }
 }
