--- a/src/app/productos/style.css
+++ b/src/app/productos/style.css
@@ -16,23 +16,29 @@
     font-size: 20px;
 }
 
+@media (width < 1450px){
+    #paginaProductos a > div,#paginaOfertas a > div{
+        width: 250px;
+    }
+}
+
 @media (width < 1300px){
     /* aside{
         display: none;
     } */
-    #paginaProductos{
+    #paginaProductos,#paginaOfertas{
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 @media (width < 1130px){
-    #paginaProductos{
+    #paginaProductos,#paginaOfertas{
         grid-template-columns: 1fr 1fr;
         justify-content: space-around;
         width: 100%;
     }
 
-    #paginaProductos a{
+    #paginaProductos a,#paginaOfertas a{
         align-self: center;
     }
 }
@@ -42,7 +48,7 @@
     aside{
         display: none;
     }
-    #paginaProductos{
+    #paginaProductos,#paginaOfertas{
         grid-template-columns: 1fr 1fr;
     }
 }
@@ -52,7 +58,7 @@
     aside{
         display: block;
     }
-    #paginaProductos{
+    #paginaProductos,#paginaOfertas{
         grid-template-columns: 1fr;
     }
 }
@@ -61,7 +67,7 @@
     aside{
         display: none;
     }
-    #paginaProductos{
+    #paginaProductos,#paginaOfertas{
         grid-template-columns: 1fr;
     }
 }
