Agregue para que no se pueda mover tanto para el costado

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,4 +1,4 @@
-#ofertas,#novedades,#destacados{
+#ofertas,#destacados{
     width: calc(100vw - 210px);
 }
 
@@ -17,7 +17,7 @@
 
 
 @media (width < 458px){
-    #ofertas,#novedades,#destacados{
+    #ofertas,#destacados{
         width: 100%;
     }
 }
