--- a/src/app/style.css
+++ b/src/app/style.css
@@ -17,7 +17,7 @@
     max-height: 320px;
     
 
-    /* animation: slider 16s infinite ease-in-out; */
+    animation: slider 14s infinite ease-in-out;
 }
 
 #banner li{
@@ -29,17 +29,13 @@
 }
 
 @keyframes slider{
-    0%{margin-left: 0%;}
     20%{margin-left: 0%;}
-
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    95%{margin-left: -300%;}
+    
+    50%{margin-left: -100%;}
+    70% {
+        margin-left: -100%;
+    }
+    100%{margin-left: 0%;}
 }
 
 @keyframes scroll{
