Haciendo mejoras en el tema de buscar por marcas y de que si no encuentra productos muestre un mensaje

--- a/src/app/login/style.css
+++ b/src/app/login/style.css
@@ -36,6 +36,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+aside{
+    display: none;
+}
+
 #login button:hover{
     border: .2rem solid #ffd400;
 }
