--- a/src/app/productos/style.css
+++ b/src/app/productos/style.css
@@ -16,6 +16,12 @@
     font-size: 20px;
 }
 
+@media (width > 1300px){
+    #paginaProductos, #paginaOfertas{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 @media ((width < 1450px) and (width > 1300px)){
     #paginaProductos a > div,#paginaOfertas a > div{
         width: 250px;
